--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -330,7 +330,7 @@ related_posts:
 
 # Declare license on posts
 post_copyright:
-  enable: false
+  enable: true
   license: <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="external nofollow" target="_blank">CC BY-NC-SA 4.0</a>
 
 # Post edit
@@ -956,3 +956,7 @@ vendors:
 css: css
 js: js
 images: images
+
+passage_end_tag:
+  enabled: true
+
