--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -495,9 +495,9 @@ changyan:
 # You can get your appid and appkey from https://leancloud.cn
 # more info please open https://valine.js.org
 valine:
-  enable: false # When enable is set to be true, leancloud_visitors is recommended to be closed for the re-initialization problem within different leancloud adk version.
-  appid:  # your leancloud application appid
-  appkey:  # your leancloud application appkey
+  enable: true # When enable is set to be true, leancloud_visitors is recommended to be closed for the re-initialization problem within different leancloud adk version.
+  appid:  Aio6T6I3bTVc7YoIIbFH0rVY-gzGzoHsz
+  appkey:  RajJqktvKfr6ETNeKzhLH6bb
   notify: false # mail notifier , https://github.com/xCss/Valine/wiki
   verify: false # Verification code
   placeholder: Just go go # comment box placeholder
@@ -959,4 +959,5 @@ images: images
 
 passage_end_tag:
   enabled: true
+
 
