--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # Site
 title: 藏经阁
 subtitle: 吾生也有涯，而知也无涯
-description: 我达达的马蹄是美丽的错误 我不是归人,是个过客
+description: 人生如逆旅,我亦是行人
 author: wenkun zhao
 language: zh-CN
 timezone: Asia/Shanghai
